# docs/swagger.yaml
@@ -1,6 +1,8 @@
 basePath: /
 definitions:
-  controller.BookResponse:
+  domain.Book:
+    type: object
+  http.BookResponse:
     properties:
       author:
         type: string
@@ -14,8 +16,6 @@ definitions:
         type: string
       updated_at:
         type: string
-    type: object
-  domain.Book:
     type: object
 host: localhost:3000
 info:
@@ -36,7 +36,7 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/controller.BookResponse'
+              $ref: '#/definitions/http.BookResponse'
             type: array
       summary: Get list of books
       tags:
@@ -72,7 +72,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/controller.BookResponse'
+            $ref: '#/definitions/http.BookResponse'
       summary: Get book by id
       tags:
       - books
